# equivariant_crystal_networks

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
learn_materials/: download.py  split.py  training.py  utils.py
learn_materials/equivariant/: .gitignore  groups.py  lattice.py  layer_generators_prism.json  product_first.py
learn_materials/equivariant/autoequiv/: __init__.py  core.py  viz.py
learn_materials/models/: cgcnn.py  embeddings.py  hyperparams.py  losses.py  megnet.py
learn_materials/mp_ids/: filtered_ids_matproj_v2021_05.json  filtered_ids_matproj_v2021_05_test.json  filtered_ids_matproj_v2021_05_train.json  filtered_ids_matproj_v2021_05_valid.json  matproj_ids_nonduplicate_small_3d_valid_graphs_v2021_05.json  matproj_ids_nonduplicate_small_3d_valid_graphs_v2021_05_test.json  matproj_ids_nonduplicate_small_3d_valid_graphs_v2021_05_train.json  matproj_ids_nonduplicate_small_3d_valid_graphs_v2021_05_valid.json
learn_materials/parse/: materials_project.py
learn_materials/prepare/: chemistry.py  clean.py  datamodel.py  graphs.py  plot.py  pymatgen_classes.py  torch_dataset.py
