[tool.poetry]
authors = ["Oumar Kaba <sekou.oumar.kaba@gmail.com>"]
description = ""
name = "learn_materials"
version = "0.1.0"

[tool.poetry.dependencies]
ase = "^3.18"
bidict = "^0.21.2"
graphviz = "^0.16.0"
ipykernel = "^5.5"
joblib = "^0.14.1"
matplotlib = "^3.1"
mendeleev = "^0.5.1"
monty = "^2021.3"
numpy = "^1.18.1"
numpy_indexed = "^0.3.5"
pandas = "^1.3.5"
pint = "^0.17.0"
pymatgen = "^2020.12.18"
pypif = "^2.1"
python = ">=3.7.1,<3.11"
uuid = "^1.30"
wandb = "0.12.1"
torch = "1.9.0"
setuptools = "^57.4.0"
sklearn = "^0.0"
scipy = "^1.7.3"
prettytable = "^3.0.0"
torch-geometric = "^2.0.4"

[tool.poetry.dev-dependencies]
gprof2dot = "^2019.11"
pylint = "^2.4"
pytest = "^3.0"
rope = "^0.14.0"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
